tests/negative/scope/unknown-object-imported/test.smol
package testing;

import alpha:NoSuchObject;

class Test {
	fn main() Unit {
	}
}
